@@ -34,7 +34,7 @@ import com.l2jserver.gameserver.network.serverpackets.SystemMessage;
  */
 public final class RequestFriendDel extends L2GameClientPacket{
 	
-	private static final String _C__61_REQUESTFRIENDDEL = "[C] 61 RequestFriendDel";
+	private static final String _C__7A_REQUESTFRIENDDEL = "[C] 7A RequestFriendDel";
 	private static Logger _log = Logger.getLogger(RequestFriendDel.class.getName());
 	
 	private String _name;
@@ -91,7 +91,7 @@ public final class RequestFriendDel extends L2GameClientPacket{
 			sm.addString(_name);
 			activeChar.sendPacket(sm);
 			
-			activeChar.getFriendList().remove(new Integer(id));
+			activeChar.getFriendList().remove(Integer.valueOf(id));
 			activeChar.sendPacket(new FriendPacket(false, id));
 			
 			L2PcInstance player = L2World.getInstance().getPlayer(_name);
@@ -112,11 +112,10 @@ public final class RequestFriendDel extends L2GameClientPacket{
 		
 	}
 	
-	
 	@Override
 	public String getType()
 	{
-		return _C__61_REQUESTFRIENDDEL;
+		return _C__7A_REQUESTFRIENDDEL;
 	}
 }
 
